# x-spider

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docs/: x-spider-local-plan.md
src/x_spider/: browser.py  cli.py  config.py  crawler.py  db.py  downloader.py  extractor.py  models.py  scope.py
tests/: test_config.py  test_crawler_paths.py  test_downloader.py  test_extractor.py  test_scope.py
